@@ -70,3 +70,4 @@ CONFIG_LOADER_MMZAK=y
 CONFIG_LOADER_N0SDOS=y
 CONFIG_LOADER_SAMSJOURNEY=y
 CONFIG_LOADER_ULTRABOOT=n
+CONFIG_LOADER_HYPRALOAD=n
