@@ -118,6 +118,9 @@ CONFIG_LOADER_SAMSJOURNEY=y
 # Enable Ultraboot fastloader
 CONFIG_LOADER_ULTRABOOT=n
 
+# Enable Hypra-Load fastloader
+CONFIG_LOADER_HYPRALOAD=n
+
 # Enable DolphinDOS parallel speeder
 CONFIG_PARALLEL_DOLPHIN=y
 
